Header and about section

--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -10,6 +10,13 @@ html(lang="ru")
 		
 		//====убрать синий цвет у ссылок в сафари ========
 		meta(name="format-detection" content="telephone=no")
+
+		//шрифты
+		link(rel='preconnect' href='https://fonts.googleapis.com')
+		link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
+		link(href='https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap' rel='stylesheet')
+
+		//====стили ========
 		link(rel="stylesheet", href="css/main.css")
 		title !{title}
 		
