--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -2,6 +2,10 @@ extends ../layouts/layout.pug
 
 block content
 	include ../sections/_header.pug
+
+	main.main 
+		include ../sections/_about.pug
+
 	include ../sections/_footer.pug
 	
 	
