--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,4 +3,11 @@
 
 //sections
 
- @import "sections/header";
+@import "sections/header";
+@import "sections/about";
+@import "sections/footer";
+
+//blocks
+@import "blocks/social-icons";
+@import "blocks/nav";
+@import "blocks/burger";
