--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,3 +11,8 @@
 @import "blocks/social-icons";
 @import "blocks/nav";
 @import "blocks/burger";
+@import "blocks/btn";
+@import "blocks/block-title";
+@import "blocks/skills";
+@import "blocks/social";
+@import "blocks/global-link";
