--- a/src/pug/sections/_about.pug
+++ b/src/pug/sections/_about.pug
@@ -3,9 +3,12 @@ section.about
 		.container
 			.top.flex
 				.top__content
-					h1.h1 Юрий Ключевский
-					p.top__descr Верстальщик сайтов, веб-разработчик. Оперативная верстка. Работаю с соблюдением сроков и выполнением ТЗ. 
-					.top__btns 	
+					.top__content-title
+						h1.h1.grad-border Юрий Ключевский
+					.top__content-img
+						img(src="./img/about/about.webp", alt="My avatar")
+					p.top__content-descr Верстальщик сайтов, веб-разработчик. Оперативная верстка. Работаю с соблюдением сроков и выполнением ТЗ. 
+					.top__btns.flex 	
 						a.btn.btn--primary(href="") Познакомиться
 						a.btn.btn--secondary(href="") Контакты
 				.top__img
@@ -13,19 +16,4 @@ section.about
 	.about__center
 		.banner
 			img.banner__img(src="./img/banner/banner-desktop.webp", alt="Banner Img")
-	.about__bottom
-		.container
-			.bottom.flex 
-				.bottom__skills
-					.block-title Что я умею:
-					ul.skills 
-						li.skills__item pixel perfect, полное соответствие макету
-						li.skills__item верстаю с сеткой или без
-						li.skills__item адаптивная верстка под мобильные устройства
-						li.skills__item оптимизация по retina экраны
-						li.skills__item с Bootstrap и без него
-				.bottom__contacts
-					.block-title На связи:
-						.social
-							 
-							a.global-link(href="mailto:nschink89@gmail.com") nschink89@gmail.com
+	
