--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,5 +14,6 @@
 @import "blocks/btn";
 @import "blocks/block-title";
 @import "blocks/skills";
-@import "blocks/social";
+@import "blocks/skills-list";
+@import "blocks/social-link";
 @import "blocks/global-link";
