Portfolio section done

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -5,6 +5,7 @@ block content
 
 	main.main 
 		include ../sections/_about.pug
+		include ../sections/_portfolio.pug
 
 	include ../sections/_footer.pug
 	
