Timeline section ready

--- a/src/scss/base/_var.scss
+++ b/src/scss/base/_var.scss
@@ -12,3 +12,4 @@ $dark-color: #000;
 $light-color: #fff;
 $active-color: #ff543e;
 $bg-gradient: linear-gradient(0deg, #f5fbff 0%, #f5fbff 100%), #f4f8f9;
+$timeline-color: #e1eef4;
