--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,6 +7,7 @@
 @import "sections/about";
 @import "sections/portfolio";
 @import "sections/footer";
+@import "sections/timeline";
 
 //blocks
 @import "blocks/social-icons";
