--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -166,6 +166,15 @@ select:-webkit-autofill:focus {
   }
 }
 
+.h4 {
+  font-size: 24px;
+  font-weight: 700;
+
+  @include tablet-big {
+    font-size: 20px;
+  }
+}
+
 .grad-border {
   display: inline;
   background-repeat: no-repeat;
