Contacts section ready

--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -25,5 +25,7 @@ html(lang="ru")
 		block content
 		
 		
-		//=============== мои скрипты ===================	
+		//=============== мои скрипты ===================
+		script(src="libs/jquery/jquery-3.7.1.min.js")
+		script(src="libs/jQuerryValidate/jquery.validate.min.js")
 		script(src="js/main.js")
