--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,6 +8,7 @@
 @import "sections/portfolio";
 @import "sections/footer";
 @import "sections/timeline";
+@import "sections/contacts";
 
 //blocks
 @import "blocks/social-icons";
@@ -21,3 +22,4 @@
 @import "blocks/global-link";
 @import "blocks/section-title";
 @import "blocks/card";
+@import "blocks/form";
