--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -7,6 +7,7 @@ block content
 		include ../sections/_about.pug
 		include ../sections/_portfolio.pug
 		include ../sections/_timeline.pug
+		include ../sections/_contacts.pug
 
 	include ../sections/_footer.pug
 	
