Sections styles edits

--- a/src/pug/sections/_contacts.pug
+++ b/src/pug/sections/_contacts.pug
@@ -1,7 +1,7 @@
 section#contacts.contacts
 	.container
 		.contacts__title
-			h2.section-title Контакты
+			h2.section-title.grad-border.grad-border--section Контакты
 		.contacts__row
 			.contacts-info
 				.contacts__text
