--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -1,6 +1,6 @@
 header.header 
-	.container 
-		.header__nav.flex 
+	.container.container--header
+		.header__nav.flex
 			a.logo HTML Верстальщик
 			nav#menu.nav 
 				ul.nav__list.flex
