--- a/src/pug/sections/_portfolio.pug
+++ b/src/pug/sections/_portfolio.pug
@@ -1,7 +1,7 @@
 section#portfolio.portfolio
 	.container
 		.portfolio__title
-			h2.section-title Портфолио
+			h2.section-title.grad-border.grad-border--section Портфолио
 		.mix-block
 			//-.mix-block__btn
 			//-	button(type='button' data-filter='all') Все работы
