--- a/src/pug/sections/_timeline.pug
+++ b/src/pug/sections/_timeline.pug
@@ -1,28 +1,28 @@
 section#timeline.timeline
 	.container
 		.timeline__title
-			h2.section-title Как я работаю
+			h2.section-title.grad-border.grad-border--section Как я работаю
 		.timeline-wrapper
 			.timeline-item(data-aos='flip-left')
 				.timeline-item__title-wrapper
-					h4.h4 Оцениваю макет
+					h4.h4.grad-border.grad-border--timeline Оцениваю макет
 				p Оцениваю объем работы, сложность, нюансы. Задаю вопросы.
 				strong Время: 2 часа
 			.timeline-item(data-aos='flip-right')
 				.timeline-item__title-wrapper
-					h4.h4 ТЗ, смета и график работ
+					h4.h4.grad-border.grad-border--timeline ТЗ, смета и график работ
 				p Согласовываем техническое задание и график работ по проекту. Осмечиваю стоимость по этапам работы.
 				strong Время: 2 - 4 часа
 			.timeline-item(data-aos='flip-left')
 				.timeline-item__title-wrapper
-					h4.h4 Вы держите руку на пульсе
+					h4.h4.grad-border.grad-border--timeline Вы держите руку на пульсе
 				p Выдаю клиенту доступ к GitHub репозиторию и доске Trello. Вы в любое время можете видеть актуальное состояние проекта и задач.
 			.timeline-item(data-aos='flip-right')
 				.timeline-item__title-wrapper
-					h4.h4 Выполняю каждый этап
+					h4.h4.grad-border.grad-border--timeline Выполняю каждый этап
 				p Поочередно выполняю каждый этап работы. Передаю результаты.Заказчик производит поэтапную оплату.
 			.timeline-item(data-aos='flip-left')
 				.timeline-item__title-wrapper
-					h4.h4 Финальное ревью проекта
+					h4.h4.grad-border.grad-border--timeline Финальное ревью проекта
 				p Проект готов. Финальное ревью и полировка до идеального состояния. Передаю файлы проекта, заливаю сайт на хостинг заказчика.
 				strong Время: 2 - 4 часа	
