--- a/src/scss/blocks/_global-link.scss
+++ b/src/scss/blocks/_global-link.scss
@@ -6,4 +6,11 @@ $global-link-color: #1a71d2;
   font-size: 22px;
   font-weight: 400;
   line-height: 1.3;
+  transition: color 0.3s ease-in-out;
+
+  &:focus,
+  &:hover,
+  &:active {
+    color: $active-color;
+  }
 }
