--- a/src/pug/sections/_about.pug
+++ b/src/pug/sections/_about.pug
@@ -4,7 +4,7 @@ section.about
 			.top.flex
 				.top__content
 					.top__content-title
-						h1.h1.grad-border Юрий Ключевский
+						h1.h1.grad-border Николай Шинкаренко
 					.top__content-img
 						img(src="./img/about/about.webp", alt="My avatar")
 					p.top__content-descr Верстальщик сайтов, веб-разработчик. Оперативная верстка. Работаю с соблюдением сроков и выполнением ТЗ. 
