--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -19,11 +19,23 @@ html(lang="ru")
 		//AOS
 		link(href='https://unpkg.com/aos@2.3.1/dist/aos.css' rel='stylesheet')
 
+		//Favicon
+		link(rel='apple-touch-icon' sizes='180x180' href='./img/favicon/apple-touch-icon.webp')
+		link(rel='icon' type='image/png' sizes='32x32' href='./img/favicon/favicon-32x32.webp')
+		link(rel='icon' type='image/png' sizes='16x16' href='./img/favicon/favicon-16x16.webp')
+		link(rel='manifest' href='./img/favicon/site.webmanifest')
+		link(rel='mask-icon' href='./img/favicon/safari-pinned-tab.svg' color='#5bbad5')
+		link(rel='shortcut icon' href='./img/favicon/favicon.ico')
+		meta(name='msapplication-TileColor' content='#da532c')
+		meta(name='msapplication-config' content='./img/favicon/browserconfig.xml')
+		meta(name='theme-color' content='#ffffff')
 
 		//====стили ========
 		link(rel="stylesheet", href="css/main.css")
 		title !{title}
-		
+		meta(name='description' content='Профессиональная HTML верстка от опытного специалиста. Создаю современные и адаптивные веб-страницы с применением последних технологий. Гарантирую индивидуальный подход к каждому проекту, соблюдаю сроки. Заказывайте качественную верстку для вашего веб-сайта.')
+
+
 	body
 		
 		block content
