--- a/src/pug/sections/_about.pug
+++ b/src/pug/sections/_about.pug
@@ -9,8 +9,8 @@ section.about
 						img(src="./img/about/about.webp", alt="My avatar")
 					p.top__content-descr Верстальщик сайтов, веб-разработчик. Оперативная верстка. Работаю с соблюдением сроков и выполнением ТЗ. 
 					.top__btns.flex 	
-						a.btn.btn--primary(href="") Познакомиться
-						a.btn.btn--secondary(href="") Контакты
+						a.btn.btn--primary(href="#skills") Познакомиться
+						a.btn.btn--secondary(href="#contacts") Контакты
 				.top__img
 					img(src="./img/about/about.webp", alt="My avatar")
 	.about__center
@@ -18,7 +18,7 @@ section.about
 			img.banner__img(src="./img/banner/banner-desktop.webp", alt="Banner Img")
 	.about__bottom
 		.container
-			.skills.flex
+			#skills.skills.flex
 				.skills-abilities
 					.skills-title-wrapper
 						.block-title Что я умею:
@@ -33,10 +33,10 @@ section.about
 						.block-title На связи:
 					.skills-contacts__social 
 						.social-wrapper.flex
-							a.social-link(href="#")
+							a.social-link(href="https://t.me/Isenhor" target="_blank")
 								svg.svg-tg
 									use(href="./img/spriteSvg.svg#svg-tg")
-							a.social-link(href="#")
+							a.social-link(href="https://wa.me/79112181531" target="_blank")
 								svg.svg-wa
 									use(href="./img/spriteSvg.svg#svg-wa")
 						a.global-link(href="mailto:nschink89@gmail.com") nschink89@gmail.com	
