--- a/src/pug/sections/_contacts.pug
+++ b/src/pug/sections/_contacts.pug
@@ -17,10 +17,10 @@ section#contacts.contacts
 							span Телефон
 							a.global-link.global-link--lh(href='tel:+79801234567') +7 (911) 218-15-31
 				.social-wrapper.flex
-							a.social-link(href="#")
+							a.social-link(href="https://t.me/Isenhor" target="_blank")
 								svg.svg-tg
 									use(href="./img/spriteSvg.svg#svg-tg")
-							a.social-link(href="#")
+							a.social-link(href="https://wa.me/79112181531" target="_blank")
 								svg.svg-wa
 									use(href="./img/spriteSvg.svg#svg-wa")
 			.contacts__form
