Mixitup sorting added

--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -44,7 +44,12 @@ html(lang="ru")
 				use(href="./img/spriteSvg.svg#svg-up")
 		
 		//=============== мои скрипты ===================
+		//-библиотека jQuery
 		script(src="libs/jquery/jquery-3.7.1.min.js")
+		//-валидация формы
 		script(src="libs/jQuerryValidate/jquery.validate.min.js")
+		//-библиотека AOS
 		script(src='https://unpkg.com/aos@2.3.1/dist/aos.js')
+		//-плагин Mixitup
+		script(src="libs/mixitup/mixitup.min.js")
 		script(src="js/main.js")
