--- a/src/pug/sections/_portfolio.pug
+++ b/src/pug/sections/_portfolio.pug
@@ -3,10 +3,10 @@ section#portfolio.portfolio
 		.portfolio__title
 			h2.section-title.grad-border.grad-border--section Портфолио
 		.mix-block
-			//-.mix-block__btn
-			//-	button(type='button' data-filter='all') Все работы
-			//-	button(type='button' data-filter='.html') HTML
-			//-	button(type='button' data-filter='.wp') WordPress
+			.mix-block__btn
+				button(type='button' data-filter='all') Все работы
+				button(type='button' data-filter='.html') HTML
+				//-button(type='button' data-filter='.wp') WordPress
 			#mix-cards.portfolio__row
 				article.card.mix.html
 					.card__image
@@ -28,33 +28,4 @@ section#portfolio.portfolio
 						a.card__desc(href='#' target='_blank')
 							h4.card__title Сайт приложения “Юнит”
 							p.card__text Верстка лендинга
-				article.card.mix.html
-					.card__image
-						a(href='#' target='_blank')
-							.card__img-wrapper
-								img.card__img(src='./img/portfolio/project-1.webp' alt='Forest Travel Site')
-								span.projects Смотреть проект
-					.card__text-wrapper
-						a.card__desc(href='#' target='_blank')
-							h4.card__title Сайт приложения “Юнит”
-							p.card__text Верстка лендинга
-				article.card.mix.html
-					.card__image
-						a(href='#' target='_blank')
-							.card__img-wrapper
-								img.card__img(src='./img/portfolio/project-2.webp' alt='Forest Travel Site')
-								span.projects Смотреть проект
-					.card__text-wrapper
-						a.card__desc(href='#' target='_blank')
-							h4.card__title Сайт приложения “Юнит”
-							p.card__text Верстка лендинга
-				article.card.mix.html
-					.card__image
-						a(href='#' target='_blank')
-							.card__img-wrapper
-								img.card__img(src='./img/portfolio/project-3.webp' alt='Forest Travel Site')
-								span.projects Смотреть проект
-					.card__text-wrapper
-						a.card__desc(href='#' target='_blank')
-							h4.card__title Сайт приложения “Юнит”
-							p.card__text Верстка лендинга
+				
