Git hub profile link added

--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -15,9 +15,6 @@ header.header
 			button.burger(type='button')
 				span.burger-bar
 			.header__social.flex
-				a(href="#") 
-					svg.svg-ln 
-						use(href="./img/spriteSvg.svg#svg-ln")
-				a(href="#") 
+				a(href="https://github.com/Isenhor" target="_blank") 
 					svg.svg-git 
 						use(href="./img/spriteSvg.svg#svg-git")
