AOS animation change and links anchors fixes

--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -5,13 +5,13 @@ header.header
 			nav#menu.nav 
 				ul.nav__list.flex
 					li.nav__item 
-						a.nav__link(href="#") Навыки
+						a.nav__link(href="#skills") Навыки
 					li.nav__item 
-						a.nav__link(href="#") Портфолио
+						a.nav__link(href="#portfolio") Портфолио
 					li.nav__item 
-						a.nav__link(href="#") Как я работаю
+						a.nav__link(href="#timeline") Как я работаю
 					li.nav__item 
-						a.nav__link(href="#") Контакты
+						a.nav__link(href="#contacts") Контакты
 			button.burger(type='button')
 				span.burger-bar
 			.header__social.flex
