Added link to Forest Travel project

--- a/src/pug/sections/_portfolio.pug
+++ b/src/pug/sections/_portfolio.pug
@@ -15,7 +15,7 @@ section#portfolio.portfolio
 								img.card__img(src='./img/portfolio/forest-travel.webp' alt='Forest Travel Site')
 								span.projects Смотреть проект
 					.card__text-wrapper
-						a.card__desc(href='#' target='_blank')
+						a.card__desc(href='https://isenhor.github.io/forest-travel-build/' target='_blank')
 							h4.card__title Верстка “Форест тревел”
 							p.card__text Верстка многостраничного сайта
 				article.card.mix.html
