Added link to forest travel project(another)

--- a/src/pug/sections/_portfolio.pug
+++ b/src/pug/sections/_portfolio.pug
@@ -10,7 +10,7 @@ section#portfolio.portfolio
 			#mix-cards.portfolio__row
 				article.card.mix.html
 					.card__image
-						a(href='#' target='_blank')
+						a(href='https://isenhor.github.io/forest-travel-build/' target='_blank')
 							.card__img-wrapper
 								img.card__img(src='./img/portfolio/forest-travel.webp' alt='Forest Travel Site')
 								span.projects Смотреть проект
