Link to Unit project in portfolio added

--- a/src/pug/sections/_portfolio.pug
+++ b/src/pug/sections/_portfolio.pug
@@ -25,7 +25,7 @@ section#portfolio.portfolio
 								img.card__img(src='./img/portfolio/unit.webp' alt='Forest Travel Site')
 								span.projects Смотреть проект
 					.card__text-wrapper
-						a.card__desc(href='#' target='_blank')
+						a.card__desc(href='https://isenhor.github.io/unit-build/' target='_blank')
 							h4.card__title Сайт приложения “Юнит”
 							p.card__text Верстка лендинга
 				
